--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+attrs==21.2.0
 cycler==0.11.0
+iniconfig==1.1.1
 kiwisolver==1.3.2
 matplotlib==3.4.3
 numpy==1.21.4
+packaging==21.2
 Pillow==8.4.0
-pyparsing==3.0.5
+pluggy==1.0.0
+py==1.11.0
+pyparsing==2.4.7
+pytest==6.2.5
 python-dateutil==2.8.2
 six==1.16.0
+toml==0.10.2
