--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==21.2.0
+coverage==6.1.1
 cycler==0.11.0
 iniconfig==1.1.1
 kiwisolver==1.3.2
@@ -10,6 +11,8 @@ pluggy==1.0.0
 py==1.11.0
 pyparsing==2.4.7
 pytest==6.2.5
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 six==1.16.0
 toml==0.10.2
+tomli==1.2.2
